tests/snapshots/fixtures__fixture@styles__color_nodes_ok.snap
---
source: tests/fixtures.rs
expression: "common::tree_sexp(&tree)"
---
(source_file
  (workspace body:
    (workspace_block
      (views body:
        (views_block
          (styles body:
            (styles_block
              (element_style tag:
                (string) body:
                (style_rule_block
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (hex_color)))
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (hex_color)))
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (named_color)))))
              (element_style tag:
                (string) body:
                (style_rule_block
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (named_color)))
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (named_color)))))
              (relationship_style tag:
                (string) body:
                (style_rule_block
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (named_color)))
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (named_color))))))))))))
