tests/snapshots/fixtures__fixture@styles__comments_and_styles_ok.snap
---
source: tests/fixtures.rs
expression: "common::tree_sexp(&tree)"
---
(source_file
  (comment)
  (workspace body:
    (workspace_block
      (views body:
        (views_block
          (system_context_view scope:
            (identifier) key:
            (string) description:
            (string) body:
            (system_context_view_block
              (include_statement value:
                (wildcard))
              (auto_layout_statement)))
          (styles body:
            (styles_block
              (element_style tag:
                (string) body:
                (style_rule_block
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (hex_color)))
                  (style_setting name:
                    (identifier) value:
                    (shape_value))
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (hex_color)))
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (named_color)))
                  (style_setting name:
                    (identifier) value:
                    (number))))
              (element_style tag:
                (string) body:
                (style_rule_block
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (hex_color)))
                  (style_setting name:
                    (identifier) value:
                    (shape_value))
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (named_color)))))
              (relationship_style tag:
                (string) body:
                (style_rule_block
                  (style_setting name:
                    (identifier) value:
                    (color_value
                      (named_color)))
                  (style_setting name:
                    (identifier) value:
                    (number)))))))))))
